--- a/topspeed.html
+++ b/topspeed.html
@@ -16,7 +16,7 @@
         <label for="sprinterType">Select Sprinter Type:</label>
         <select id="sprinterType">
             <option value="blockStarts">Block Starts</option>
-            <option value="both">Both</option>
+            <option value="neutral">Neutral</option>
             <option value="topSpeed">Top Speed</option>
         </select>
 
