--- a/topspeed.html
+++ b/topspeed.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Speed Calculator</title>
+    <!-- Link to the updated CSS file -->
     <link rel="stylesheet" href="topspeed.css">
 </head>
 <body>
     <div class="calculator">
         <h2>100m Sprint Top Speed Calculator</h2>
 
-        <label for="timeInput">Enter your 100m time (in seconds, excluding reaction time):</label>
+        <label for="timeInput">Enter your 100m time:</label>
         <input type="number" id="timeInput" step="0.01" min="1" required>
 
         <label for="sprinterType">Select Sprinter Type:</label>
         <select id="sprinterType">
             <option value="blockStarts">Block Starts</option>
-            <option value="neutral">Neutral</option>
+            <option value="both">Both</option>
             <option value="topSpeed">Top Speed</option>
         </select>
 
@@ -25,6 +26,7 @@
         <h3 id="resultMin"></h3>
     </div>
 
+    <!-- Link to the updated JavaScript file -->
     <script src="topspeed.js"></script>
 </body>
 </html>
